[package]
name = "more_bullets_yay"
version = "0.2.4"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]

[lib]
name = "more_bullets_yay"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"

[dependencies]
bincode = "0.8"
byteorder = "0.5"
log = "0.3"
fern = "0.4"
flate2 = "0.2"
chrono = "0.4"
libc = "0.2"
lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"
thread_local = "0.3.2"
quick-error = "1.1.0"
winapi = "0.2.5"

[dependencies.whack]
git = "https://github.com/neivv/whack/"

[dependencies.bw_dat]
path = "bw_dat"
